[package]
name = "orbfont"
description = "Orbital font rendering"
repository = "https://gitlab.redox-os.org/redox-os/orbfont"
version = "0.1.10"
license-file = "LICENSE"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[dependencies]
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient.git" }
rusttype = "0.7.3"

[target.'cfg(all(not(feature="no_std"), not(target_os = "redox")))'.dependencies]
font-loader = "0.7.0"
