[package]
name = "orbfont"
description = "Orbital font rendering"
repository = "https://gitlab.redox-os.org/redox-os/orbfont"
version = "0.1.10"
license = "MIT"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2018"

[dependencies]
orbclient = "0.3"
rusttype = "0.8"

[target.'cfg(not(target_os = "redox"))'.dependencies]
font-loader = "0.7.0"
