[package]
name = "orbfont"
description = "Orbital font rendering"
repository = "https://gitlab.redox-os.org/redox-os/orbfont"
version = "0.1.11"
license = "MIT"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2018"

[dependencies]
orbclient = { version = "0.3", default-features = false }
rusttype = { version = "0.9.3", default-features = false }
num-traits = { version = "0.2", default-features = false, optional = true }

[target.'cfg(not(target_os = "redox"))'.dependencies]
font-loader = { version = "0.11.0", optional = true }

[features]
default = ["std"]
std = ["rusttype/std", "font-loader", "orbclient/bundled"]
no-std = ["rusttype/libm-math", "num-traits"]
